tests/typing/good/testfile-subtype-4.scala

class A { def m() { var b: Any = ! true } }
object Main { def main(args: Array[String]) { } }
