tests/typing/bad/testfile-lt1-1.scala
class A { def m() { var b: Int = 1 < 1 } }
object Main { def main(args: Array[String]) { } }
